ansible/faucet/strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-linera-respeer-faucet-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/faucet
      - /ws
      - /
